# BBS

./: CMakeLists.txt  README.md  file.py
include/: bbs.hpp
release/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Mine.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  bbs.vcxproj  bbs.vcxproj.filters  cmake_install.cmake
release/bbs.dir/Debug/: bbs.exe.recipe
release/bbs.dir/Debug/bbs.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  bbs.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
release/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
release/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
release/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
release/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
results/: OUTPUT1952805748.csv  OUTPUT_0.csv  OUTPUT_1.csv  OUTPUT_45.csv  OUTPUT_45_2.csv  test_1.csv
src/: bbs.cpp  main.cpp
